# rust-udp-graph

./: CHANGELOG.md  Cargo.toml  Dockerfile  README.md  main.rs
.github/workflows/: ci.yml  release.yml
templates/: index.html
