[package]
name = "rust_udp_graph"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "rust_udp_graph"
path = "main.rs"

[dependencies]
actix = "0.13"
actix-web = "4"
actix-web-actors = "4"
tera = "1.20"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
